[MWPW-171366]Fix alignment of text in error toast (#352)
* Fix alignment of text in error toast

Resolves: [MWPW-171366](https://jira.corp.adobe.com/browse/MWPW-171366)

**Test URLs:**
- Before:
https://stage--cc--adobecom.hlx.page/creativecloud/animation/testdoc/remove-background?unitylibs=stage&martech=off
- After:
https://stage--cc--adobecom.hlx.page/creativecloud/animation/testdoc/remove-background?unitylibs=MWPW-171366&martech=off

--- a/unitylibs/core/styles/styles.css
+++ b/unitylibs/core/styles/styles.css
@@ -236,6 +236,10 @@
   align-self: stretch;
 }
 
+.upload.unity-enabled .alert-holder .alert-toast .alert-content .alert-text {
+  align-content: center;
+}
+
 .unity-enabled .interactive-area .alert-holder .alert-toast .alert-content .alert-text p {
   color: var(--color-white);
   font-weight: 400;
